Resolves: fdo#55685 SvxLanguageBox is in svxcore not in svx

Change-Id: I50f68674e057dd358357d611bbbbb3332d8cd00b